Prevent odd wrapping

--- a/styles/2_style.css
+++ b/styles/2_style.css
@@ -566,7 +566,7 @@ span {
 }
 
 #home-employees {
-  width: 80%;
+  width: 85%;
   margin: 3em auto;
   height: 208px; /* 4 rows of 48 pixel high images + 8*2px margin */
 }
